Ticket #1188 (closed defect: fixed)

Opened 1 year ago

Last modified 1 year ago

Corrupted output stream with vcodec=MJPG mux=mpjpeg

Reported by: xtophe Assigned to: courmisch
Priority: normal Milestone: 0.9.0 bugs
Component: Muxers Version:
Severity: normal Keywords: patch
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

The command: vlc http://doorcam/img/video.asf --sout '#transcode{vcodec=MJPG,venc=ffmpeg{strict=1}}:standard{access=http{mime=image/jpeg},mux=mpjpeg,dst=:8080/doorcam.mjpg}'

gives a bad stream on the http port. After the http header, I get: --myboundaryM Content-Type: image/jpegM ÿØÿþ@QLavc0d.51.11.0@ÿÛ@C@

Note the missing blank line between the MIME headers and the real data.

Subsequent headers look like: --myboundaryM Content-Type: image/jpegM Content-Length: 3638M M @ÿØÿþ@QLavc0d.51.11.0@ÿÛ@C@

which seems OK to me.

See Debian bug #421695 for further comments

Attachments

mjpeg-vlc.patch (1.9 kB) - added by xtophe on 05/04/07 17:37:38.

Change History

05/04/07 17:37:38 changed by xtophe

  • attachment mjpeg-vlc.patch added.

10/02/07 19:23:52 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

10/02/07 19:26:36 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [22381]) - Heavily simplify the MPJPEG mux (closes #1188); please test.

  • Remove configurable boundary that had never been working anyway (did not match the original value from MUX_GET_MIME)