 - Heavily simplify the MPJPEG mux (closes #1188); please test.  - Remove configurable boundary that had never been working anyway (did not match the original value from MUX_GET_MIME)